automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-<style>
 @import url('https://fonts.googleapis.com/css?family=Elsie');
-</style>
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
 /* css syntax:
 
 selector {
