automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Elsie');
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps');
 @import url('https://fonts.googleapis.com/css?family=Clicker+Script');
 /* css syntax:
 
