--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
   color: rgba(127,21,25,1)
   text-align: right;
 }
