--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,11 @@ figcaption {
   color: rgba(127,21,25)
   text-align: right;
 }
+
+/* class selector (applied to as many elements as you like) */
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
