--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,8 @@ figcaption {
   color: black;
   text-decoration: none;
 }
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
